myservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myservice
  template:
    metadata:
      labels:
        app: myservice
    spec:
      containers:
        - image: moussa923/myservice:1
          imagePullPolicy: IfNotPresent
          name: myservice
      restartPolicy: Always
