microservices.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  ports:
    - nodePort: 31280
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: myservice
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myservice
  template:
    metadata:
      labels:
        app: myservice
    spec:
      containers:
        - image: moussa923/myservice:1
          imagePullPolicy: IfNotPresent
          name: myservice
      restartPolicy: Always

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myservice
spec:
  hosts:
  - "*"
  gateways:
  - microservice-gateway
  http:
  - match:
    - uri:
        prefix: /myservice/
#        regex: '\/carservice\/*'
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 8080 #modification
        host: myservice.default.svc.cluster.local
